0.10.0
- added trajectory cmd line script
- added tcl bindings
- model->errorMessage buffer now cleared before actual model loading
- fixed pkg-config support file

0.9.0 - 16/02/2008
- added tutorial chapter to documentation
- added intro section to documentation
- fixes and additions to documentation
- robustified IDMC_EPS_VALUE definition
- added pkg-config support
- added C++ compatibility directives to include files

0.8.2 - 10/12/2007
- added API documentation in texinfo (html,pdf,...) format
- upgraded java bindings to reporting new syntax error messages
- robustified idmc_model_free functions (now accepts even NULL pointers)
- added detailed syntax error message reporting to the user

0.8.1 - 07/12/2007
- fixed serious bug in Numerical Jacobian Evaluation routine
- added more testing code
- robustified error message reporting
- misc code cleaning

0.8.0 - 16/11/2007
- removed all BLAS/LAPACK fortran code. Now depending exclusively on gsl and lua
- updated dependency from gsl version 1.9 (eigenvalues for nonsymm. matrices)

0.7.0 - 06/07/2007
- added version info functions to java interface

0.6.1 - 30/06/2007
- improved version-info definitions
- fixed bug in basin_slow module

0.6.0 - 14/06/2007
- added basin_slow module
- added version info functions
- moved R bindings to separate, indipendent project

0.5.0 - 13/04/2007
- minor cleaning to C sources to avoid gcc warnings
- migrated the whole package to the CMake build system. Now building
	(especially on linux systems) should be quasi-automatic

0.4.0 - 3/03/2007
- added some new doc to library headers
- added new Java interface tests
- improved R and Java error printing (now using new message storing mechanism of model objects)
- added lua error message storing in model object
- added java runtime exception raising when executing model functions
- added check of function results in model functions evaluation
- added print method and packed more detailed infos of model objects in R interface